--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
     <meta property="og:url" content="index.html">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-1435"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="906" data-image-height="250">
+        <a href="https://leudyespinal.com" class="u-image u-logo u-image-1" data-image-width="906" data-image-height="250">
           <img src="images/logo1.png" class="u-logo-image u-logo-image-1" data-image-width="246">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -82,14 +82,14 @@
         <p class="u-small-text u-text u-text-variant u-text-1">©&nbsp;2021&nbsp;Leudy Espinal. All rights reserved.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
+      <a class="u-link" href="https://leudyespinal.com/">
+        <span>Leudy Espinal</span>
       </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>Design & dev by</span>
       </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
+      <a class="u-link" href="https://espinalcreative.com/" target="_blank">
+        <span>Espinal Creative</span>
       </a>. 
     </section>
   </body>
