--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <p class="u-small-text u-text u-text-variant u-text-1">©&nbsp;2021&nbsp;Leudy Espinal. All rights reserved.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
+      <a class="u-link" href="https://leudyespinal.com">
+        <span>Leudy Espinal</span>
       </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>Design & dev by</span>
       </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
+      <a class="u-link" href="https://espinalcreative.com/" target="_blank">
+        <span>Espinal Creative</span>
       </a>. 
     </section>
   </body>
