--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="vcard, resume, personal, portfolio, cv, card, responsive" />
-        <meta name="keywords" content="vcard, resume, personal, portfolio, cv, card, responsive" />
-        <meta name="author" content="cosmos-themes" />
+        <meta name="description" content="Leudy Espinal, Art, Artist" />
+        <meta name="keywords" content="Leudy Espinal, Art, Artist" />
+        <meta name="author" content="Leudy Espinal" />
 
         <!--Page Title-->
         <title>Leudy Espinal / Visual Artist</title>
@@ -49,7 +49,7 @@
         <header>
 
             <!-- logo -->
-            <a class="logo" href="#"><span>LE</span></a>
+            <a class="logo" href="https://leudyespinal.com/"><span>LE</span></a>
 
             <!-- navigation button -->
             <div class="menu-button">
